--- a/src/client/index.html
+++ b/src/client/index.html
@@ -6,5 +6,7 @@
     <body>
         <div id="root" />
         <script src="public/bundle.js" type="text/javascript"></script>
+        <!-- Latest compiled and minified CSS -->
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">
     </body>
 </html>
