--- a/src/client/index.html
+++ b/src/client/index.html
@@ -1,12 +1,12 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>React.js using NPM, Babel6 and Webpack</title>
+        <title>Budget Daily - budget, daily.</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+        <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
     </head>
     <body>
         <div id="root" />
         <script src="public/bundle.js" type="text/javascript"></script>
-        <!-- Latest compiled and minified CSS -->
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">
     </body>
 </html>
